--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Html Page</title>
+    <title>Altschool Project</title>
 </head>
 <body>
     <!-- Heading -->
@@ -61,9 +61,9 @@
         </thead>
         <tbody>
            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td>Emmanuel</td>
+              <td>Aboderin</td>
+              <td>aboderinemmanuel@gmail.com</td>
            </tr>
         </tbody>
 
