--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Altschool Project</title>
 </head>
 <body>
+   <!--Semantic Element -->
+   <header>
+      <nav></nav>
+   </header>
+   <main>
+      <article></article>
+      <section></section>
+      <aside></aside>
+    </main>
+    <footer>
+    </footer>
+    
+    
+
     <!-- Heading -->
     <h1>Hello! I have joined Altschool Africa!!!!</h1>
     <h2>Hello! I have joined Altschool Africa!!!!</h2>
