--- a/form.html
+++ b/form.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Altschool Registration Form</title>
 </head>
 <body>
-    
+    <form action="" method="post">
+    <div>
+        <label for="first_name">First name</label>
+        <input
+        type="text"
+        name="first_name"
+        id="first_name"
+        class="first_name"
+        required
+        />
+    </div>
+    <div>
+        <label for="last_name">Last name</label>
+        <input
+        type="text"
+        name="last_name"
+        id="last_name"
+        class="last_name"
+        required
+        />
+    </div>
+    <div>
+        <label for="email">Email address</label>
+        <input type="email" name="email" id="email" class="email" required
+        />
+    </div>
+      <div>
+        <label for="phone">Phone number</label>
+        <input type="tel" name="phone" id="phone" class="phone" required
+        /> 
+      </div>
+      <div>
+          <label for="gender">Gender</label>
+          <select name="gender" required>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+            <option value="prefer_not_to_say">prefer not to say</option>
+          </select>
+      </div>
+        <button>submit</button>
+    </form>
 </body>
 </html>
