--- a/table.html
+++ b/table.html
@@ -49,7 +49,13 @@
                     <td>+2345678901</td>
                     <td>female</td>
                     </tr>    
-
+                    <tr>
+                        <td>Dele</td>
+                        <td>Indrustrial Mathematics</td>
+                        <td>DeleIndusrtialMathematics@gmail.com</td>
+                        <td>+2345678901</td>
+                        <td>male</td>
+                        </tr>
 
 
        </tbody>
